# packages_apps_JamesDSPManager

./: .gitignore  build.gradle  gradlew
app/: build.gradle
app/jni/: CMakeLists.txt
app/jni/libsamplerate/: Android.bp  Android.mk  CMakeLists.txt
app/jni/libsndfile/: Android.bp  Android.mk  CMakeLists.txt  config.h  sndfile.h
app/jni/main/: Android.mk  CMakeLists.txt  JdspImpResToolbox.c
app/src/main/: Android.mk  AndroidManifest.xml
app/src/main/java/james/dsp/activity/: AdvancedOptions.java  DSPManager.java  DSPScreen.java  JdspImpResToolbox.java
app/src/main/java/james/dsp/preference/: EqualizerPreference.java  EqualizerSurface.java  SeekBarPreference.java  SummariedListPreferenceDDC.java  SummariedListPreferenceWithCustom.java  SummariedTextPreferenceRanged.java
app/src/main/java/james/dsp/receiver/: BootCompletedReceiver.java
app/src/main/java/james/dsp/service/: HeadsetService.java
app/src/main/java/james/dsp/tile/: JamesTile.java
app/src/main/java/james/dsp/utils/: ParameterUtils.java
app/src/main/java/james/dsp/widgets/: CustomDrawerLayout.java
app/src/main/res/drawable/: background_gradient.xml  ic_launcher_foreground.xml
app/src/main/res/drawable-anydpi/: notification_icon.xml
app/src/main/res/layout/: activity_main.xml  drawer_item.xml  seek_bar_preference.xml
app/src/main/res/menu/: menu.xml
app/src/main/res/values/: arrays.xml  colors.xml  strings.xml  styles.xml
app/src/main/res/values-ar/: arrays.xml  strings.xml
app/src/main/res/values-cs/: arrays.xml  strings.xml
app/src/main/res/values-da/: arrays.xml  strings.xml
app/src/main/res/values-de/: arrays.xml  strings.xml
app/src/main/res/values-el/: strings.xml
app/src/main/res/values-es/: arrays.xml  strings.xml
app/src/main/res/values-fr/: arrays.xml  strings.xml
app/src/main/res/values-hu/: arrays.xml  strings.xml
app/src/main/res/values-in/: arrays.xml  strings.xml
app/src/main/res/values-it/: arrays.xml  strings.xml
app/src/main/res/values-ja/: arrays.xml  strings.xml
app/src/main/res/values-ko/: arrays.xml  strings.xml
app/src/main/res/values-ku/: arrays.xml  strings.xml
app/src/main/res/values-nl/: arrays.xml  strings.xml
app/src/main/res/values-pl/: arrays.xml  strings.xml
app/src/main/res/values-pt-rBR/: arrays.xml  strings.xml
app/src/main/res/values-pt-rPT/: arrays.xml  strings.xml
app/src/main/res/values-ro/: arrays.xml  strings.xml
app/src/main/res/values-ru/: arrays.xml  strings.xml
app/src/main/res/values-tr/: arrays.xml  strings.xml
app/src/main/res/values-uk/: strings.xml
app/src/main/res/values-vi/: arrays.xml
app/src/main/res/values-zh-rCN/: arrays.xml  strings.xml
app/src/main/res/values-zh-rTW/: strings.xml
app/src/main/res/xml/: advanced_preferences.xml  bluetooth_preferences.xml  speaker_preferences.xml
